Изменение отправки json в Rabbitmq + правки в коде
